[package]
name = "player-count-discord-bot"
version = "0.1.1"
edition = "2021"

[dependencies]
a2s = { version = "0.5.2", features = ["async"] }
anyhow = "1.0.86"
crossterm = "0.27.0"
humantime = "2.1.0"
humantime-serde = "1.1.1"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serenity = { version = "0.12.2", features = ["gateway", "utils"] }
simplelog = "0.12.2"
thiserror = "1.0.63"
tokio = { version = "1.38.0", features = ["rt", "signal", "sync", "time"] }
tokio-util = "0.7.11"
toml = "0.8.14"

[patch.crates-io]
a2s = { path = "./lib/a2s-rs" }

[profile.release]
strip = true
incremental = true